<resources>
    <string name="app_name">MyRxJava</string>
    <string name="second">Second</string>
    <string name="first">First</string>
    <string name="third">Third</string>
    <string name="server">Server</string>
    <string name="toast">Toast</string>
    <string name="result">Result</string>
    <string name="start_something_long">Start something long</string>
    <string name="progress_bar_visible">Progressbar set visible</string>
    <string name="space" />
    <string name="colors">Colors</string>
    <string name="books">Books</string>
    <string name="scheduler">Scheduler</string>
    <string name="back">Back</string>

</resources>
