<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server"
        />
    <Button
        android:id="@+id/toastbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toast"
        android:onClick="onClick"
        />
    <Button
        android:id="@+id/schedulerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toast"
        android:onClick="onClick"
        />
    <Button
        android:id="@+id/colorsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colors"
        android:onClick="onColorActivityChange"
        />
    <Button
        android:id="@+id/booksButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/books"
        android:onClick="onBookActivityChange"
        />

    <TextView
        android:id="@+id/resultView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        />
</LinearLayout>